# syafiqkayDOTcom

./: .coverage  .gitignore  .gitmessage  CHANGELOG.md  Dockerfile  LICENSE  MANUAL_REBUILD_README.md  MANUAL_REBUILD_WORKFLOW.md  README.md  SECURITY_ASSESSMENT.md  SESSION_SUMMARY.md  azure-pipelines-1.yml  clean_project.sh  create_journal_entry.py  debug.txt  docker-compose.yaml  git-flow.txt  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-fresh.txt  requirements.txt  run_tests.sh  setup.sh  syafiq_statement.md  syafiq_statement_plain 2.md  test_odbc.py
-docs/: GITHUB_ISSUE_TEMPLATE.md  README.md
-scripts/: README 2.md
.devcontainer/: devcontainer.json
.tests_output/: results.xml
docs/: DATABASE_MANUAL.md  DJANGO_REBUILD_MANUAL.md  DOC_ORGANIZATION_MANUAL.md  ENVIRONMENT_TESTING_GUIDE.md  GITHUB_CLI_MANUAL.md  GIT_FLOW_GUIDE.md  GIT_FLOW_TROUBLESHOOTING.md  README.md  STYLE_GUIDE 2.md  STYLE_GUIDE.md  azure_sql_commands.md  sqlite_commands.md
experiments/: ADMIN_GUIDE 2.md  BILINGUAL_FEATURES.md  admin 2.py  models.py  urls.py  views.py
home/: tests.py  urls.py  views.py
homepage/: README.md  admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py  views_new.py
journals/: README.md  admin.py  apps.py  forms.py  models.py  urls.py  views.py  views_clean.py
notoGarden/: apps.py  urls.py  views.py
noto_garden/: README.md  admin.py  apps.py  models.py  urls.py  views.py
reference/: README.md  admin.py  apps.py  forms.py  models.py  models_alternative.py  tests.py  urls.py  views.py
scripts/: README.md  activate-poetry-env.txt  backup_databases.py  check_test_db.py  commit.sh  create_journal_entry.py  restore_databases.py  run_tests.sh  simple_convert.py  (+4 more)
(+262 files in other folders)
